# ksmaxis

./: .gitignore  CMakeLists.txt  README.md  ksmaxis.vcxproj  ksmaxis.vcxproj.filters
example/: ksmaxis.sln  ksmaxis_example.vcxproj  main.cpp
include/ksmaxis/: ksmaxis.hpp
modules/: CMakeLists.txt  ksmaxis.cppm
src/: ksmaxis_linux.cpp  ksmaxis_macos.cpp  ksmaxis_win32.cpp
